<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/ivMusicIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@android:drawable/ic_lock_silent_mode_off"
        android:contentDescription="@string/music_icon"
        android:padding="4dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:background="@drawable/item_background"
        android:layout_marginStart="8dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_song"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:maxLines="1"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/tvArtist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_artist"
            android:textColor="@color/light_gray"
            android:textSize="12sp"
            android:maxLines="1"
            android:ellipsize="end"/>
    </LinearLayout>
</LinearLayout>
